test/yamls/np/hostnames-allow-prod9376.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: hostnames-allow-prod9376
spec:
  podSelector:
    matchLabels:
      app: hostnames
  ingress:
  - ports:
    - port: 9376
    from:
    - namespaceSelector:
        matchLabels:
          purpose: production
