test/yamls/np/hostnames-deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: hostnames-deny-all
spec:
  podSelector:
    matchLabels:
      app: hostnames
  ingress: []
